--- a/src/EZDotNet.Services/EZDotNet.Services.csproj
+++ b/src/EZDotNet.Services/EZDotNet.Services.csproj
@@ -4,14 +4,34 @@
         <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        
+        <PackageId>EZDotNet.Services</PackageId>
+        <Version>1.0.0</Version>
+        <Authors>Nathan</Authors>
+        <Company>e-z-services</Company>
+        <Description>ASP.NET Core integration package for e-z.host services, providing dependency injection setup and file handling extensions for uploading, shortening, and paste services.</Description>
+        <PackageTags>e-z.host;file-upload;api-client;paste;shortener</PackageTags>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+        <PackageProjectUrl>https://github.com/e-z-services/e-z-dotnet</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/e-z-services/e-z-dotnet</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="6.0.0-preview.4.21253.5" />
+        <None Include="../../README.md" Pack="true" PackagePath="/" />
+    </ItemGroup>
+
+    <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.4" />
     </ItemGroup>
 
+    <ItemGroup>
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    </ItemGroup>
+    
     <ItemGroup>
       <ProjectReference Include="..\EZDotNet.Core\EZDotNet.Core.csproj" />
     </ItemGroup>
