--- a/src/EZDotNet.Services/EZDotNet.Services.csproj
+++ b/src/EZDotNet.Services/EZDotNet.Services.csproj
@@ -17,9 +17,12 @@
         <RepositoryUrl>https://github.com/e-z-services/e-z-dotnet</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageIcon>icon.png</PackageIcon>
+
     </PropertyGroup>
 
     <ItemGroup>
+        <None Include="../../icon.png" Pack="true" PackagePath="/" />
         <None Include="../../README.md" Pack="true" PackagePath="/" />
     </ItemGroup>
 
